linked in re-located css

--- a/html/stylesheet.html
+++ b/html/stylesheet.html
@@ -5,7 +5,7 @@
     <title>Aircraft Lite</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-    <link rel="stylesheet" href="../../css/stylesheet.css">
+    <link rel="stylesheet" href="../css/stylesheet.css">
   </head>
   <body>
     <center>
