removed slashes from comments about form

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
             </div>
           </div>
         </div>
-        <!---------- form starts ---------->
+        <!--form starts -->
         <form>
           <div class="container">
             <div class="row">
@@ -121,7 +121,7 @@
             </div>
           </div>
         </form>
-        <!---------- form ends ---------->
+        <!-- form ends -->
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
