Frontend side of this feature is finished (layout and styling); Still need backend data.

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="semantic.css">
     <link rel="stylesheet" href="animate.css">
   </head>
   <body>
@@ -139,6 +140,158 @@
           </div>
         </form>
         <!-- form ends -->
+        <!-- flight cards start -->
+        <div class="flight-cards" id="flight-cards">
+          <div class="container flight-card-grid">
+            <div class="row">
+              <!-- card 1 -->
+              <div class="col-lg-2 col-lg-offset-1 col-sm-6">
+              <div class="flight-card">
+                <div class="ui link cards">
+                  <div class="card">
+                    <div class="image">
+                      Best Flight
+                    </div>
+                    <div class="content">
+                      <div class="description">
+                        SNA to SFO
+                      </div>
+                      <div class="header">United</div>
+                      <div class="description price">
+                        <h1>$145</h1>
+                      </div>
+                      <div class="description info">
+                        <div class="time">7:50 am - 9:25 am</div>
+                        <div class="duration">1 h 35 min</div>
+                        <div class="stop">Nonstop</div>
+                      </div>
+                    </div>
+                    <div class="extra content">
+                      <button type="submit" class="btn btn-default book-button">Book</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <!-- card 2 -->
+              <div class="col-lg-2 col-sm-6">
+              <div class="flight-card">
+                <div class="ui link cards">
+                  <div class="card">
+                    <div class="image">
+                      Best Flight
+                    </div>
+                    <div class="content">
+                      <div class="description">
+                        SNA to SFO
+                      </div>
+                      <div class="header">United</div>
+                      <div class="description price">
+                        <h1>$145</h1>
+                      </div>
+                      <div class="description">
+                        <div class="time">7:50 am - 9:25 am</div>
+                        <div class="duration">1 h 35 min</div>
+                        <div class="stop">Nonstop</div>
+                      </div>
+                    </div>
+                    <div class="extra content">
+                      <button type="submit" class="btn btn-default book-button">Book</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <!-- card 3 -->
+              <div class="col-lg-2 col-sm-6">
+              <div class="flight-card">
+                <div class="ui link cards">
+                  <div class="card">
+                    <div class="image">
+                      Best Flight
+                    </div>
+                    <div class="content">
+                      <div class="description">
+                        SNA to SFO
+                      </div>
+                      <div class="header">United</div>
+                      <div class="description price">
+                        <h1>$145</h1>
+                      </div>
+                      <div class="description">
+                        <div class="time">7:50 am - 9:25 am</div>
+                        <div class="duration">1 h 35 min</div>
+                        <div class="stop">Nonstop</div>
+                      </div>
+                    </div>
+                    <div class="extra content">
+                      <button type="submit" class="btn btn-default book-button">Book</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <!-- card 4 -->
+              <div class="col-lg-2 col-sm-6">
+              <div class="flight-card">
+                <div class="ui link cards">
+                  <div class="card">
+                    <div class="image">
+
+                    </div>
+                    <div class="content">
+                      <div class="description">
+                        SNA to SFO
+                      </div>
+                      <div class="header">United</div>
+                      <div class="description price">
+                        <h1>$145</h1>
+                      </div>
+                      <div class="description">
+                        <div class="time">7:50 am - 9:25 am</div>
+                        <div class="duration">1 h 35 min</div>
+                        <div class="stop">Nonstop</div>
+                      </div>
+                    </div>
+                    <div class="extra content">
+                      <button type="submit" class="btn btn-default book-button">Book</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+               <!-- card 5 -->
+              <div class="col-lg-2 col-sm-6">
+              <div class="flight-card">
+                <div class="ui link cards">
+                  <div class="card">
+                    <div class="image">
+
+                    </div>
+                    <div class="content">
+                      <div class="description">
+                        SNA to SFO
+                      </div>
+                      <div class="header">United</div>
+                      <div class="description price">
+                        <h1>$145</h1>
+                      </div>
+                      <div class="description">
+                        <div class="time">7:50 am - 9:25 am</div>
+                        <div class="duration">1 h 35 min</div>
+                        <div class="stop">Nonstop</div>
+                      </div>
+                    </div>
+                    <div class="extra content">
+                      <button type="submit" class="btn btn-default book-button">Book</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div> <!-- card 5 end -->
+            </div> <!-- row end -->
+          </div> <!-- container end -->
+        </div> <!-- flight cards end -->
       </div> <!-- gradient background end -->
       <div class="container">
         <div class="pd-title">
@@ -149,36 +302,63 @@
       </div>
       <div class="container pd-grid">
         <div class="row">
-          <div class="col-md-3 col-sm-3 sf1">
-            sf
+          <div class="col-md-3 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
-          <div class="col-md-3 col-sm-3 sf2">
-            sf
+          <div class="col-md-3 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
-          <div class="col-md-4 col-sm-3 sf3">
-            sf
+          <div class="col-md-4 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
-          <div class="col-md-2 col-sm-3 sf4">
-            sf
+          <div class="col-md-2 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2 col-sm-3 sf4">
-            sf
+          <div class="col-md-2 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
-          <div class="col-md-3 col-sm-3 sf3">
-            sf
+          <div class="col-md-3 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
-          <div class="col-md-3 col-sm-3 sf4">
-            sf
+          <div class="col-md-3 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
-          <div class="col-md-4 col-sm-3 sf1">
-            sf
+          <div class="col-md-4 col-sm-3 pop-des">
+            <div class="des-image">
+              <div class="location"></div>
+              <div class="cost"></div>
+            </div>
           </div>
         </div>
       </div>
+      <div id="content"></div>
     </center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="flights.js"></script>
+    <script src="destinations.js"></script>
   </body>
 </html>
