#2 Looped JSON array onto frontend. Finished issue.

--- a/html/index.html
+++ b/html/index.html
@@ -302,56 +302,72 @@
       </div>
       <div class="container pd-grid">
         <div class="row">
-          <div class="col-md-3 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          <a href="#">
+            <div class="col-md-3 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          </a>
+          <a href="#">
+            <div class="col-md-3 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-4 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          </a>
+          <a href="#">
+            <div class="col-md-3 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-2 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          </a>
+          <a href="#">
+            <div class="col-md-3 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="row">
-          <div class="col-md-2 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          <a href="#">
+            <div class="col-md-2 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          </a>
+          <a href="#">
+            <div class="col-md-3 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          </a>
+          <a href="#">
+            <div class="col-md-3 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-4 col-sm-3 pop-des">
-            <div class="des-image">
-              <div class="location"></div>
-              <div class="cost"></div>
+          </a>
+          <a href="#">
+            <div class="col-md-4 col-sm-3 pop-des">
+              <div class="des-opacity">
+                <div class="location"></div>
+                <div class="cost"></div>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
       <div id="content"></div>
