--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
               </button>
               <button type="button" class="navbar-toggle collapsed plane-button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
-                <img src="plane-logo.png" class="plane-logo" />
+                <img src="plane-logo.png" class="plane-logo">
               </button>
               <a class="navbar-brand collapse navbar-collapse id='bs-example-navbar-collapse-2'" href="#">Aircraft Lite</a>
             </div>
@@ -371,16 +371,18 @@
         </div>
       </div>
       <div id="content"></div>
-      <div class="vaycay"></div>
+        <div id="map"></div>
       <div class="footer">
         <div class="footer-logo">
-          <img src="plane-logo.png" class="plane-logo" />
+          <img src="plane-logo.png" class="plane-logo">
         </div>
       </div>
     </center>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1hsULBi75yJ7ZqaMPMOBzI5nswHeU_Og&callback=initMap"></script>
     <script src="flights.js"></script>
     <script src="destinations.js"></script>
+    <script src="map.js"></script>
   </body>
 </html>
